--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,29 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display+SC');
 
+/* App */
 .App {
   padding: 1em;
 }
 
+/* Form fields */
 label {
   display: inline-block;
   width: 100px;
 }
 
+/* Header */
 header {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  font-size: 30px;
+  text-align: center;
 }
 
-/* typography */
-
+/* Typography */
 html {
   font-family: 'helvetica neue', sans-serif;
 }
 
-thead th, tfoot th {
+thead th,
+tfoot th {
   font-family: 'Rock Salt';
 }
 
@@ -30,31 +34,34 @@ th {
 
 td {
   letter-spacing: 1px;
-  overflow-x:hidden;
-  overflow-y:hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   font-size: 12px;
   padding: 10px;
   text-align: center;
 }
 
-/* table */
-
+/* Table */
 table {
   table-layout: fixed;
   width: 100%;
   border-collapse: collapse;
-  overflow:hidden;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
+/* Set alternate row colors */
+tbody tr:nth-child(odd) {
+  background-color: #FFEEC9;
+}
+
+tbody tr:nth-child(even) {
+  background-color: white;
+}
+
+/* Limit content size in table cell */
 .content_td p {
   max-width: 100%;
   max-height: 100px;
   overflow-y: auto;
   text-overflow: ellipsis;
 }
-
-/* Column Size for thead */
-
-
-/* Column size for tbody */
